crates/oxc_react_compiler/tests/snapshots/error.dont-hoist-inline-reference.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.dont-hoist-inline-reference.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: [hoisting] EnterSSA: Expected identifier to be defined before being used", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 67, length: 22 }, primary: false }], help: Some("Identifier x$1 is undefined"), note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
