crates/oxc_react_compiler/tests/snapshots/error.function-expression-references-variable-its-assigned-to.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.function-expression-references-variable-its-assigned-to.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot reassign variable after render completes", labels: [LabeledSpan { label: Some("Cannot reassign `callback` after render completes"), span: SourceSpan { offset: 52, length: 8 }, primary: false }], help: Some("Reassigning `callback` after render has completed can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
